--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,12 @@
 </head>
 
 <body>
-    <div class="jumbotron">
+    <div class="jumbotron text-center">
         <h1>Welcome to GREATBAY!</h1>
         <hr>
         <h3>View Current Items up for Bid</h3>
     </div>
+    <ol id="list"></ol>
 
     <script src="/assets/js/index.js"></script>
 </body>
